# shinypenny

./: Cargo.toml  LICENSE-MIT  README.md  demo.csv
.config/: extra.dic  spellcheck.toml
.github/: FUNDING.yml
assets/: test.csv
src/: config.rs  errors.rs  main.rs  pdf.rs  types.rs
src/pdf/: constants.rs  helper.rs  mod.rs  types.rs
src/pdf/tabular/: column.rs  mod.rs  state.rs  style.rs  table.rs  text.rs
src/types/: bankinfo.rs  companyinfo.rs  euro.rs  exchange.rs  expense.rs  mod.rs  percentage.rs  receipts.rs  record.rs
