[package]
name = "shinypenny"
version = "0.1.1"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
edition = "2018"
license = "Apache-2.0 AND MIT"
description = "A niftly little helper program creating reimbursement requests in pdf form from a csv or commandline."
repository = "https://github.com/drahnr/shinypenny"
homepage = "https://github.com/drahnr/shinypenny"
readme = "README.md"
keywords = ["reimbursement", "tax", "pdf"]
categories = ["command-line-utilities"]
include = ["assets/*.ttf", "src/**/*", "Cargo.toml"]

[dependencies]
docopt = "1"
csv = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.4"
lazy_static = "1"
indexmap = "1"
anyhow = "1"
dirs = "3"
regex = "1"
lopdf = "0.26"
float-cmp = "0.8"
printpdf = { version = "0.3.3", features = [
    "jpeg_rayon",
    "webp",
    "embedded_images"
] }
iban_validate = { version = "4", features = ["std", "serde"] }
fints-institute-db = "1"
chrono = { version = "0.4", features = ["serde", "std", "clock"] }
harfbuzz_rs = { version = "1", features = [
    "build-native-harfbuzz",
    "build-native-freetype"
] }
toml = "0.5"
fs-err = "2"
itertools = "0.9"
infer = "0.2"
