[package]
name = "shinypenny"
version = "0.3.4"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
edition = "2018"
license = "Apache-2.0 AND MIT"
description = "A niftly little helper program creating reimbursement requests in pdf form from a csv or commandline."
repository = "https://github.com/drahnr/shinypenny"
homepage = "https://github.com/drahnr/shinypenny"
readme = "README.md"
keywords = ["reimbursement", "tax", "pdf"]
categories = ["command-line-utilities"]
include = ["assets/*.ttf", "src/**/*", "Cargo.toml"]

[dependencies]
docopt = "1"
csv = "1"
assert_matches = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.4"
lazy_static = "1.4"
indexmap = "1"
color-eyre = "0.5"
dirs = "3"
regex = "1"
float-cmp = "0.8"
lopdf = "0.26.0"
printpdf = { version = "=0.3.4", features = [
    "jpeg_rayon",
    "webp",
    "embedded_images"
] }
iban_validate = { version = "4", features = ["std", "serde"] }
fints-institute-db = "1"
chrono = { version = "0.4", features = ["serde", "std", "clock"] }
harfbuzz_rs = { version = "1", features = [
    "build-native-harfbuzz",
    "build-native-freetype"
] }
toml = "0.5"
fs-err = "2"
itertools = "0.10"
infer = "0.4.0"
# exchange rates
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
iso_currency = { version = "0.4.1", features = ["with-serde"] }

# make sure backtracking is always fast
[profile.dev.package.backtrace]
opt-level = 3
